Added cat food blending problem and solution for music genre machine learning example #6

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -75,7 +75,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -112,7 +114,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -170,7 +174,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -319,7 +325,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -381,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -393,7 +401,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -422,7 +432,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -452,7 +464,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -480,7 +494,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -516,7 +532,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -552,7 +570,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -610,7 +630,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -668,7 +690,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -710,7 +734,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -753,7 +779,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -801,7 +829,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -850,7 +880,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -928,7 +960,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -970,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -1065,7 +1099,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1094,7 +1130,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1118,7 +1156,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1141,6 +1181,46 @@
    "metadata": {},
    "source": [
     "Using `pulp` is far easier and robust than coding our own, and will cover a much wider range of problems."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try using pulp to implement the following optimisation problem.\n",
+    "\n",
+    "Whiskas want to make their cat food out of just two ingredients: chicken and beef. These ingredients must be blended such that they meet the nutritional requirements for the food whilst minimising costs. The costs of chicken and beef are \\$0.013 and \\$0.008 per gram, and their nutritional contributions per gram are:\n",
+    "\n",
+    "Stuff | Protein | Fat | Fibre | Salt\n",
+    ":-- | :-: | --:\n",
+    "Chicken |\t0.100 |\t0.080 |\t0.001 |\t0.002\n",
+    "Beef |\t0.200 |\t0.100 |\t0.005 |\t0.005\n",
+    "\n",
+    "Let's define our decision variables:\n",
+    "\n",
+    "$$x_1 = \\text{percentage of chicken in can of cat food} $$\n",
+    "$$x_2 = \\text{percentage of beef in can of cat food}$$\n",
+    "    \n",
+    "As these are percentages, we know that both must be $0 \\leq x \\leq 100$ and that they must sum to 100. The objective function to minimise costs is \n",
+    "    \n",
+    "$$\\min 0.013 x_1 + 0.008 x_2$$\n",
+    "\n",
+    "The constraints (that the variables must sum to 100 and that the nutritional requirements are met) are:\n",
+    "\n",
+    "$$1.000 x_1 + 1.000 x_2 = 100.0$$\n",
+    "$$0.100 x_1 + 0.200 x_2 \\ge 8.0$$\n",
+    "$$0.080 x_1 + 0.100 x_2 \\ge 6.0$$\n",
+    "$$0.001 x_1 + 0.005 x_2 \\le 2.0$$\n",
+    "$$0.002 x_1 + 0.005 x_2 \\le 0.4$$\n",
+    "\n",
+    "This problem was taken from the [pulp documentation](https://pythonhosted.org/PuLP/CaseStudies/a_blending_problem.html) - you can find the solution there."
    ]
   },
   {
@@ -1261,7 +1341,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1278,7 +1360,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1375,7 +1459,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1403,7 +1489,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1470,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -1493,7 +1581,9 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1603,7 +1693,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1632,7 +1724,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1760,7 +1854,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "labels = iris['Name']\n",
@@ -1808,7 +1904,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1842,7 +1940,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1947,7 +2047,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1984,7 +2086,159 @@
    "source": [
     "1. Vary the size of the training / testing split to see how it affects the accuracy.\n",
     "2. Try a different classifier - the `KNeighborsClassifier` for example.\n",
-    "3. Try a different dataset: look at `sklearn.datasets` for possibilities, such as the [digits](http://scikit-learn.org/stable/modules/generated/sklearn.datasets.load_digits.html#sklearn.datasets.load_digits) dataset which does handwriting recognition."
+    "3. Try a different dataset: \n",
+    "    - have a go at creating a classifier for the music data we used in the data handling session. See how the accuracy changes when you exclude the pop dataset - can you think why this may be so? Does the same thing happen when we exclude other genres?\n",
+    "    - look at `sklearn.datasets` for possibilities, such as the [digits](http://scikit-learn.org/stable/modules/generated/sklearn.datasets.load_digits.html#sklearn.datasets.load_digits) dataset which does handwriting recognition."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's a worked solution for the music data classifier. We'll start by importing the libraries and data we need."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import tree\n",
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dfs = {'indie': pandas.read_csv('spotify_data/indie.csv'), 'pop': pandas.read_csv('spotify_data/pop.csv'), \n",
+    "       'country': pandas.read_csv('spotify_data/country.csv'), 'metal': pandas.read_csv('spotify_data/metal.csv'), \n",
+    "       'house': pandas.read_csv('spotify_data/house.csv'), 'rap': pandas.read_csv('spotify_data/rap.csv')}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
+       "            max_features=None, max_leaf_nodes=None,\n",
+       "            min_impurity_split=1e-07, min_samples_leaf=1,\n",
+       "            min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "            presort=False, random_state=None, splitter='best')"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for genre, df in dfs.items():\n",
+    "    df['genre'] = genre\n",
+    "\n",
+    "dat = pandas.concat(dfs.values())\n",
+    "\n",
+    "# define a list of the fields we want to use to train our classifier\n",
+    "columns = ['duration_ms', 'explicit', 'popularity', 'acousticness', 'danceability', \n",
+    "       'energy', 'instrumentalness', 'key', 'liveness', 'loudness',\n",
+    "       'mode', 'speechiness', 'tempo', 'time_signature', 'valence', 'genre']\n",
+    "\n",
+    "# define data as all columns but the genre column\n",
+    "data = dat[columns].drop('genre', axis=1)\n",
+    "\n",
+    "# define labels as the genre column\n",
+    "labels = dat[columns].genre\n",
+    "\n",
+    "# split the data into a training set and a testing set\n",
+    "data_train, data_test, labels_train, labels_test = train_test_split(data, labels, test_size = 0.3)\n",
+    "\n",
+    "# create the classifier\n",
+    "classifier = tree.DecisionTreeClassifier()\n",
+    "\n",
+    "# train the classifier using the training data\n",
+    "classifier.fit(data_train, labels_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree Accuracy with 50/50: 0.6363636363636364\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate the accuracy of the classifier using the testing data\n",
+    "accuracy = accuracy_score(labels_test, classifier.predict(data_test))\n",
+    "print(\"Decision Tree Accuracy with 50/50: {}\".format(accuracy))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The accuracy of this classifier is not great. As the `train_test_split` function randomly selects its training and test data, the accuracy will change every time you run it, but it tends to be 60-70%. Let's try excluding the pop data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree Accuracy with 50/50: 0.8857142857142857\n"
+     ]
+    }
+   ],
+   "source": [
+    "nopop_dat = dat[dat.genre != 'pop']\n",
+    "\n",
+    "# define data as all columns but the genre column\n",
+    "data = nopop_dat[columns].drop('genre', axis=1)\n",
+    "\n",
+    "# define labels as the genre column\n",
+    "labels = nopop_dat[columns].genre\n",
+    "\n",
+    "data_train, data_test, labels_train, labels_test = train_test_split(data, labels, test_size = 0.1)\n",
+    "\n",
+    "classifier = tree.DecisionTreeClassifier()\n",
+    "classifier.fit(data_train, labels_train)\n",
+    "\n",
+    "accuracy = accuracy_score(labels_test, classifier.predict(data_test))\n",
+    "print(\"Decision Tree Accuracy with 50/50: {}\".format(accuracy))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This classifier is now quite a bit more accurate - 75-85%. Generally, the accuracy of your classifier should improve the fewer categories it has to classify. "
    ]
   },
   {
@@ -2018,7 +2272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
