Added material on debugging - closes #6

--- a/00-first-steps.ipynb
+++ b/00-first-steps.ipynb
@@ -282,6 +282,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Debugging"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Spyder provides several ways to debug our code. The simplest is simply to print out your data using python's `print` function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This will print out the variable to the terminal. This can be useful if you quickly need to check that a variable has been set to the correct value, but if you have long arrays of data this can be less useful, resulting in a large amount of data being dumped onto your screen in a format that is not so easy to read. \n",
+    "\n",
+    "A better way of debugging code in Spyder is by using *code cells*. You may have come across these before if you've used Matlab or Mathematica. We define a new code cell with `#%%` - in the screen shot below, you can see that spyder has inserted a horizontal line across the editor above this line to show the new code cell. Individual cells can be executed at a time using the 'run current cell' button (circled). The values of the variables after the execution of the cell can then be investigated using the variable explorer on the right.\n",
+    "\n",
+    "![Code cells - circled are the 'run current cell' button and the variable explorer.](images/codecells.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cells are very useful, but unfortunately will not allow us to debug all codes. Later on we shall learn about *for loops*, structures where the same section of code shall be executed multiple times. If we want to investigate variables within this for loop, we need to use *breakpoints*. \n",
+    "\n",
+    "In the screenshot below, we've circled spyder's debugging toolbar. The blue play/pause button will allow you start running your program in the python debugger, `ipdb`. You should see the prompt `ipdb>` appear in the terminal. You can then execute the program line by line using the next button along ('Run current line'). At any point, you can print variables using python's `print` function in the terminal. \n",
+    "\n",
+    "In the screenshot below, we've set a breakpoint in our code (shown as a red circle) on line 7 by double clicking to the left of the line number. We can run our code up to this breakpoint using the fast forward button (the two triangles). This will run our code up it reaches the first break point, then pause the execution before running that line. So in our example, the code in lines 1-6 will execute, but the code will then be paused before executing line 7. We can then print out the value of `x` at this point. If we press the button again, it will execute the for loop again, allowing us to see how the variables get updated.\n",
+    "\n",
+    "![Breakpoints - circled are the debugging options.](images/breakpoints.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Reading list\n",
     "\n",
     "There's a lot of material related to Python online and in the library. None are essential, but lots may be useful. The particular books recommended as a first look are\n",
@@ -309,7 +368,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -357,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.4.4"
   },
   "nbconvert": {
    "title": "First Steps"
