Added further reading links for pandas

--- a/03-plotting-data.ipynb
+++ b/03-plotting-data.ipynb
@@ -3746,6 +3746,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Further reading\n",
+    "\n",
+    "For a basic pandas tutorial, check out [Python for ecologists](http://www.datacarpentry.org/python-ecology-lesson/) from the Data Carpentry website. Of particular interest may be the last lesson which shows how to interact with SQL databases using python and pandas. \n",
+    "\n",
+    "For a more in-depth pandas tutorial, check out these [notebooks](https://github.com/fonnesbeck/ngcm_pandas_2017) by Chris Fonnesbeck. In the [last notebook](https://github.com/fonnesbeck/ngcm_pandas_2017/blob/master/notebooks/2.4%20-%20Data%20Analysis%20with%20Pandas%20and%20Scikit-learn.ipynb), there is quite a lot of material on using pandas with scikit-learn for machine learning, including regression analysis, decision trees and random forests. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Other libraries"
    ]
   },
